# Master_Project-Mouth-State-Detection

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/mouth/: mouthstate
devel/lib/pkgconfig/: mouth.pc
devel/share/mouth/cmake/: mouthConfig.cmake
src/mouth/: CMakeLists.txt
src/mouth/include/mouth/: FaceDetector.h  MouthStateClassifier.h  MouthStateDetector.h  MouthTracker.h
src/mouth/src/: FaceDetector.cpp  MouthStateClassifier.cpp  MouthStateDetector.cpp  MouthTracker.cpp  main.cpp
